backend/deploy/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quality-backend-dashboard
  labels:
    app: quality-dashboard
    app.kubernetes.io/component: quality-backend
    app.kubernetes.io/instance: quality-dashboard
    app.kubernetes.io/name: quality-dashboard
    component: quality-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quality-dashboard
      component: quality-backend
  template:
    metadata:
      labels:
        app: quality-dashboard
        app.kubernetes.io/component: quality-backend
        app.kubernetes.io/instance: quality-dashboard
        app.kubernetes.io/name: quality-dashboard
        component: quality-backend
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - resources:
            limits:
              cpu: 500m
              memory: 6Gi
            requests:
              cpu: 200m
              memory: 512Mi
          name: quality-backend-dashboard
          command: ["/root/server-runtime"]
          args:
            - "--port=8000"
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          imagePullPolicy: Always
          image: >-
            quay.io/redhat-appstudio/quality-dashboard-backend:latest
      securityContext:
        runAsNonRoot: true
