backend/deploy/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: quality-backend-route
spec:
  to:
    kind: Service
    name: quality-backend-service
  port:
    targetPort: 8000
  tls:
    termination: edge
